# rw

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  Makefile  OAUTH_SETUP.md  PLAN.md  RD.md  README.md  REVIEW.md  RUST_IDIOMS_CHECKLIST.md  SUMMARY.md  TASKS.md  TEST_COVERAGE_ANALYSIS.md  USAGE_GUIDE.md  clippy.toml  config.toml.example  dist-workspace.toml  docstage.toml.example  package-lock.json  package.json  pyproject.toml  renovate.json  rust-toolchain.toml  rw.toml.example  tsconfig.json
.cache/: navigation.json
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer-prepare.sh  devcontainer.json  init-firewall.sh  post-create.sh  post-start.sh
crates/docstage/: Cargo.toml
crates/docstage-config/: Cargo.toml
crates/docstage-config/src/: lib.rs
crates/docstage-confluence/: Cargo.toml
crates/docstage-confluence-renderer/: Cargo.toml
crates/docstage-confluence-renderer/src/: lib.rs
crates/docstage-confluence/src/: backend.rs  error.rs  lib.rs  renderer.rs  tags.rs
crates/docstage-confluence/src/client/: attachments.rs  comments.rs  mod.rs  pages.rs
crates/docstage-confluence/src/comment_preservation/: matcher.rs  mod.rs  parser.rs  transfer.rs  tree.rs
crates/docstage-confluence/src/oauth/: key.rs  mod.rs  signature.rs  token_generator.rs
crates/docstage-confluence/src/types/: attachment.rs  comment.rs  mod.rs
crates/docstage-confluence/src/updater/: executor.rs  mod.rs
crates/docstage-core/: Cargo.toml
crates/docstage-core/src/: config.rs  confluence.rs  confluence_tags.rs  converter.rs  diagram_filter.rs  diagram_processor.rs  html.rs  kroki.rs  lib.rs  navigation.rs  page_cache.rs  page_renderer.rs  plantuml.rs  plantuml_filter.rs  site.rs  site_cache.rs  site_loader.rs  util.rs
crates/docstage-core/src/renderer/: backend.rs  confluence.rs  html.rs  mod.rs  state.rs
crates/docstage-core/src/updater/: error.rs  executor.rs  mod.rs  result.rs
crates/docstage-diagrams/: Cargo.toml
crates/docstage-diagrams/src/: cache.rs  consts.rs  html_embed.rs  kroki.rs  language.rs  lib.rs  output.rs  plantuml.rs  processor.rs
crates/docstage-py/: Cargo.toml
crates/docstage-py/src/: lib.rs
crates/docstage-renderer/: Cargo.toml
crates/docstage-renderer/src/: backend.rs  code_block.rs  confluence.rs  html.rs  lib.rs  renderer.rs  state.rs  util.rs
crates/docstage-server/: Cargo.toml
crates/docstage-server/src/: app.rs  error.rs  lib.rs  state.rs  static_files.rs
crates/docstage-server/src/handlers/: config.rs  mod.rs  navigation.rs  pages.rs
crates/docstage-server/src/live_reload/: manager.rs  mod.rs  websocket.rs
crates/docstage-server/src/middleware/: mod.rs  security.rs
crates/docstage-site/: Cargo.toml
crates/docstage-site/src/: lib.rs  navigation.rs  renderer.rs  site.rs  site_cache.rs  site_loader.rs
crates/docstage/src/: error.rs  main.rs  output.rs
crates/docstage/src/commands/: mod.rs  serve.rs
crates/docstage/src/commands/confluence/: generate_tokens.rs  mod.rs  update.rs
crates/rw-assets/: Cargo.toml  build.rs
crates/rw-assets/src/: lib.rs
crates/rw-backstage/: Cargo.toml
crates/rw-backstage/src/: format.rs  lib.rs  publisher.rs  s3.rs  storage.rs
crates/rw-cache/: Cargo.toml
crates/rw-cache-s3/: Cargo.toml
crates/rw-cache-s3/src/: lib.rs
crates/rw-cache/src/: ext.rs  file.rs  lib.rs
crates/rw-comments/: Cargo.toml
crates/rw-comments/src/: anchoring.rs  creation.rs  error.rs  html_text.rs  lib.rs  model.rs  sqlite.rs
crates/rw-config/: Cargo.toml
crates/rw-config/src/: expand.rs  lib.rs
crates/rw-confluence/: Cargo.toml
crates/rw-confluence/src/: backend.rs  error.rs  lib.rs  render.rs  renderer.rs  tags.rs
crates/rw-confluence/src/client/: attachments.rs  comments.rs  mod.rs  pages.rs
crates/rw-confluence/src/comment_preservation/: entities.rs  matcher.rs  mod.rs  parser.rs  serializer.rs  transfer.rs  tree.rs
crates/rw-confluence/src/oauth/: key.rs  mod.rs  signature.rs  token_generator.rs
crates/rw-confluence/src/types/: attachment.rs  comment.rs  mod.rs  page.rs
crates/rw-confluence/src/updater/: error.rs  executor.rs  mod.rs  result.rs
crates/rw-confluence/tests/: render_integration.rs
crates/rw-diagrams/: Cargo.toml
crates/rw-diagrams/src/: cache.rs  html_embed.rs  kroki.rs  language.rs  lib.rs  meta_includes.rs  output.rs  plantuml.rs  processor.rs  search.rs
crates/rw-embedded-preview/: Cargo.toml
crates/rw-embedded-preview/src/: lib.rs  preview.css  preview.html  preview.js
crates/rw-kroki/: Cargo.toml
crates/rw-kroki/src/: cache.rs  html_embed.rs  kroki.rs  language.rs  lib.rs  meta_includes.rs  output.rs  plantuml.rs  processor.rs  scale.rs  search.rs
crates/rw-meta/: Cargo.toml
crates/rw-meta/src/: fields.rs  head.rs  lib.rs
crates/rw-napi/: Cargo.toml
crates/rw-napi/src/: lib.rs  types.rs
crates/rw-parser/: Cargo.toml
crates/rw-parser/src/: alert.rs  event.rs  fence.rs  lib.rs  parser.rs
crates/rw-parser/src/directive/: args.rs  line.rs  mod.rs
crates/rw-sections/: Cargo.toml
crates/rw-sections/src/: lib.rs  namespace.rs
crates/rw-server/: Cargo.toml  build.rs
crates/rw-server-info/: Cargo.toml
crates/rw-server-info/src/: lib.rs
crates/rw-server/src/: app.rs  error.rs  lib.rs  state.rs  static_files.rs  testing.rs
crates/rw-server/src/handlers/: comments.rs  config.rs  internal.rs  mod.rs  navigation.rs  pages.rs  preview.rs  sections.rs
crates/rw-server/src/live_reload/: debouncer.rs  manager.rs  mod.rs
crates/rw-server/src/middleware/: mod.rs  security.rs
crates/rw-site/: Cargo.toml
crates/rw-site/benches/: page_rendering.rs  site_structure.rs
crates/rw-site/src/: cache_version.rs  lib.rs  metadata.rs  page.rs  page_cache.rs  path.rs  renderer.rs  site.rs  site_cache.rs  site_loader.rs  site_state.rs  typed_page_registry.rs
crates/rw-storage-fs/: Cargo.toml
crates/rw-storage-fs/src/: debouncer.rs  inheritance.rs  lib.rs  scanner.rs  source.rs  yaml.rs
docs/: comment-cli.md  configuration.md  confluence.md  diagrams.md  embedding.md  metadata.md  status-badges.md  techdocs.md
(+193 files in other folders)
