[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.6"
edition = "2024"
rust-version = "1.91"
license = "MIT"

[workspace.dependencies]
# Internal crates
rw-assets = { path = "crates/rw-assets" }
rw-cache = { path = "crates/rw-cache" }
rw-config = { path = "crates/rw-config" }
rw-confluence = { path = "crates/rw-confluence" }
rw-diagrams = { path = "crates/rw-diagrams" }
rw-renderer = { path = "crates/rw-renderer" }
rw-server = { path = "crates/rw-server" }
rw-site = { path = "crates/rw-site" }
rw-storage = { path = "crates/rw-storage" }
rw-storage-fs = { path = "crates/rw-storage-fs" }
rw-techdocs = { path = "crates/rw-techdocs" }

# External dependencies
base64 = "0.22"
glob = "0.3"
minijinja = "2"
notify = "8"
quick-xml = "0.39"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
hex = "0.4"
pretty_assertions = "1.4"
pulldown-cmark = { version = "0.13", default-features = false, features = ["simd"] }
rayon = "1.10"
regex = "1.11"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
static_assertions = "1.1"
tempfile = "3"
tracing = "0.1"
ureq = { version = "3", features = ["rustls", "json"] }

# OAuth 1.0 RSA-SHA1
rsa = { version = "0.9", features = ["pem", "sha1"] }
sha1 = { version = "0.10", features = ["oid"] }
percent-encoding = "2.3"
rand = "0.10"
shellexpand = "3"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Restriction lints
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
print_stdout = "warn"
print_stderr = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
str_to_string = "warn"
todo = "warn"
unimplemented = "warn"
verbose_file_reads = "warn"
# Nursery lints
debug_assert_with_mut_call = "warn"
redundant_clone = "warn"
unused_peekable = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
