[project]
name = "docstage-workspace"
version = "0.1.0"
description = "Documentation engine for Backstage"
requires-python = ">=3.14"
# Workspace root is not a package itself
dependencies = ["docstage"]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=8.0.0",
    "pytest-aiohttp>=1.0.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
docstage = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages/docstage/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
strict = true
exclude = [
    "^packages/docstage/tests/",  # Test files
]

[[tool.mypy.overrides]]
module = ["authlib.*", "authlib.integrations.*"]
ignore_missing_imports = true
