[package]
name = "docstage-config"
description = "Configuration management for Docstage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
