[package]
name = "docstage-confluence-renderer"
description = "Confluence XHTML backend for docstage-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
docstage-renderer = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
