[package]
name = "docstage-confluence"
description = "Confluence integration for Docstage (renderer, API client, etc.)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
docstage-renderer = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
