[package]
name = "docstage-core"
description = "High-performance markdown renderer for Docstage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
docstage-confluence-renderer = { workspace = true }
docstage-diagrams = { workspace = true }
docstage-renderer = { workspace = true, features = ["serde"] }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
