[package]
name = "docstage-core"
description = "Confluence integration for Docstage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
docstage-config = { workspace = true }
docstage-confluence = { workspace = true }
docstage-diagrams = { workspace = true }
docstage-renderer = { workspace = true }

tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
