[package]
name = "docstage-py"
description = "Python bindings for docstage-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "docstage_core"
crate-type = ["cdylib"]

[dependencies]
docstage-core = { workspace = true }
pulldown-cmark = { workspace = true }
pyo3 = { workspace = true }
