[package]
name = "docstage-renderer"
description = "Trait-based markdown renderer with pluggable backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
pulldown-cmark = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
