[package]
name = "rw-cache-s3"
description = "S3-backed cache implementation for RW"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rw-cache = { workspace = true }

aws-sdk-s3 = "1"
tokio = { version = "1", features = ["rt"] }
tracing = { workspace = true }
