[package]
name = "rw-cache"
description = "Cache abstraction layer for RW"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
