[package]
name = "rw-diagrams"
description = "Diagram rendering via Kroki"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
rw-cache = { workspace = true }
rw-renderer = { workspace = true }
hex = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
