[package]
name = "rw-embedded-preview"
description = "Embedded preview shell for RW documentation engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
axum = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
