[package]
name = "rw-kroki"
description = "Kroki-backed diagram rendering for RW"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
rw-cache = { workspace = true }
rw-renderer = { workspace = true }
rw-sections = { workspace = true }
hex = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
