[package]
name = "rw-meta"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Metadata extraction and resolution for RW documentation engine"

[lints]
workspace = true

[dependencies]
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
