[package]
name = "rw-napi"
description = "NAPI native addon exposing RW core to Node.js"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4", "async", "tokio_rt", "serde-json"] }
napi-derive = "3"

rw-cache = { workspace = true }
rw-config = { workspace = true }
rw-site = { workspace = true }
rw-storage = { workspace = true }
rw-storage-fs = { workspace = true }
rw-storage-s3 = { workspace = true }

chrono = "0.4"
tokio = { version = "1", features = ["rt"] }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"
