[package]
name = "rw-sections"
description = "Section reference types and utilities for RW"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }
