[package]
name = "rw-server-info"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Runtime server-info file (.rw/server.json) for the RW documentation engine"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
