[package]
name = "rw-server"
description = "HTTP server for RW documentation engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
# Internal crates
rw-assets = { workspace = true }
rw-cache = { workspace = true }
rw-site = { workspace = true }
rw-config = { workspace = true }
rw-renderer = { workspace = true, features = ["serde"] }
rw-storage = { workspace = true }
rw-storage-fs = { workspace = true }

# HTTP framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "set-header",
    "compression-gzip",
    "trace"
] }

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
thiserror = "2"
tracing = { workspace = true }
md-5 = "0.10"
hex = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
tokio-test = "0.4"
