[package]
name = "rw-server"
description = "HTTP server for RW documentation engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
rw-assets = { workspace = true }
rw-cache = { workspace = true }
rw-site = { workspace = true }
rw-config = { workspace = true }
rw-embedded-preview = { workspace = true }
rw-renderer = { workspace = true, features = ["serde"] }
rw-comments = { workspace = true }
rw-server-info = { workspace = true }
rw-storage = { workspace = true }
rw-storage-fs = { workspace = true }

# HTTP framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["set-header"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
md-5 = "0.11"
hex = { workspace = true }
chrono = { version = "0.4" }

[dev-dependencies]
pretty_assertions = { workspace = true }
rw-storage = { workspace = true, features = ["mock"] }
tokio-test = "0.4"
serde_urlencoded = "0.7"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
