[package]
name = "rw-site"
description = "Site structure and page rendering for RW"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rw-diagrams = { workspace = true }
rw-renderer = { workspace = true, features = ["serde"] }

regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
static_assertions = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "page_rendering"
harness = false

[[bench]]
name = "site_structure"
harness = false
