[package]
name = "rw-site"
description = "Site structure and page rendering for RW"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rw-cache = { workspace = true }
rw-diagrams = { workspace = true }
rw-renderer = { workspace = true, features = ["serde"] }
rw-storage = { workspace = true }

regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rw-storage = { workspace = true, features = ["mock"] }
rw-storage-fs = { workspace = true }
static_assertions = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "page_rendering"
harness = false

[[bench]]
name = "site_structure"
harness = false
