[package]
name = "rw-storage-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Filesystem storage backend for RW documentation engine"

[dependencies]
rw-storage = { workspace = true }
glob = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
