[package]
name = "rw-storage-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Filesystem storage backend for RW documentation engine"

[lints]
workspace = true

[dependencies]
rw-storage = { workspace = true }
glob = { workspace = true }
ignore = { workspace = true }
notify = { workspace = true }
rw-meta = { workspace = true }
serde_yaml = { workspace = true }
rayon = { workspace = true }
rw-vcs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
